fix overflowing list item ripple effect

--- a/src/migration-mdc.scss
+++ b/src/migration-mdc.scss
@@ -20,8 +20,8 @@
 
 // Filters
 mat-list-option {
-  overflow-x: unset !important;
-  overflow-y: unset !important;
+  //overflow-x: unset !important;
+  //overflow-y: unset !important;
   height: auto !important;
   line-height: 1.25rem !important;
 }
